# ldirstat

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  format-src.sh  tidy-src.sh
.github/workflows/: release-appimage.yml
bench/: bench.result.txt  gentree.cpp  scandirs.cpp  scanmounts.cpp
docs/: HELP.md
packaging/: build-appimage.sh  read-project-version.sh
packaging/linux/: ldirstat.desktop  ldirstat.metainfo.xml.in
scripts/: build.sh  buildd.sh  cppcheck.sh  format.sh  tidy.sh
src/app/: main.cpp  resources.qrc
src/core/: direntry.h  direntrystore.h  filecategorizer.h  filesystem.cpp  filesystem.h  flamegraph.cpp  flamegraph.h  modifiedtimehistogram.cpp  modifiedtimehistogram.h  namestore.h  scanner.cpp  scanner.h  treemap.cpp  treemap.h
src/ui/: dirlistcolumn.cpp  dirlistcolumn.h  dirlistview.cpp  dirlistview.h  dirtreeview.cpp  dirtreeview.h  entrytooltip.h  filecategorystatsdialog.cpp  filecategorystatsdialog.h  filelistview.cpp  filelistview.h  flamegraphwidget.cpp  flamegraphwidget.h  graphwidget.h  iconutil.h  mainwindow.cpp  mainwindow.h  mainwindowbuilder.cpp  mainwindowbuilder.h  modifiedtimehistogramdialog.cpp  modifiedtimehistogramdialog.h  mountlistwidget.cpp  mountlistwidget.h  rangeslider.cpp  rangeslider.h  scanprogresswidget.cpp  scanprogresswidget.h  themecolors.h  treemapwidget.cpp  treemapwidget.h  welcomewidget.cpp  welcomewidget.h
tests/: filecategorizer_tests.cpp  flamegraph_tests.cpp  modifiedtimehistogram_tests.cpp  scanner_tests.cpp
